--- a/ios/nagalarm/Info.plist
+++ b/ios/nagalarm/Info.plist
@@ -20,6 +20,19 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>nagalarm</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>demos</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -37,10 +50,17 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
-	<key>NSRemindersUsageDescription</key>
-	<string>Allow NagAlarm to access your location</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>NagAlarm wants to access your min to record your voice for alarms</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>Allow NagAlarm to access your location</string>
+	<key>UIUserInterfaceStyle</key>
+	
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -55,9 +75,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-	</array>
 </dict>
 </plist>
