--- a/ios/nagalarm/Info.plist
+++ b/ios/nagalarm/Info.plist
@@ -54,6 +54,13 @@
 	<string>NagAlarm wants to access your min to record your voice for alarms</string>
 	<key>NSRemindersUsageDescription</key>
 	<string>Allow NagAlarm to access your location</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
