--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-community/checkbox": "^0.5.8",
     "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/slider": "^4.1.9",
+    "@react-native-firebase/app": "14.3.2",
+    "@react-native-firebase/messaging": "14.3.2",
     "@react-native-picker/picker": "^2.1.0",
     "@react-navigation/bottom-tabs": "^6.0.7",
     "@react-navigation/drawer": "^6.1.6",
